environment/ossdemo-utility-update-subnetNSG.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "networkSecurityGroups_NSG_ossdemo_utility_name": {
            "defaultValue": "NSG-ossdemo-utility",
            "type": "String"
        },
        "virtualNetworks_ossdemos_vnet_name": {
            "defaultValue": "ossdemos-vnet",
            "type": "String"
        },
        "virtualNetworks_ossdemos_vnet_id": {
            "defaultValue": "/subscriptions/REPLACE-JSON-SUBSCRIPTIONID/resourceGroups/ossdemo-appdev-iaas/providers/Microsoft.Network/networkSecurityGroups/NSG-ossdemo-appdev-iaas",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_NSG_ossdemo_utility_name')]",
            "apiVersion": "2016-03-30",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "rdp-rule",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "ssh-rule",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_ossdemos_vnet_name')]",
            "apiVersion": "2016-03-30",
            "location": "[resourceGroup().location]",
            "tags": {},
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "192.168.0.0/16"
                    ]
                },
                "dhcpOptions": {
                    "dnsServers": []
                },
                "subnets": [
                    {
                        "name": "ossdemo-utility-subnet",
                        "properties": {
                            "addressPrefix": "192.168.0.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_ossdemo_utility_name'))]"
                            }
                        }
                    },
                    {
                        "name": "ossdemo-appdev-iaas-subnet",
                        "properties": {
                            "addressPrefix": "192.168.1.0/24",
                            "networkSecurityGroup": {
                                "id": "[parameters('virtualNetworks_ossdemos_vnet_id')]"
                            }
                        }
                    }
                ]
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_ossdemo_utility_name'))]"
            ]
        }
    ]
}
